tests/fixtures/recursive_type.out
info: Typechecking...
error: Type cannot contain itself:

        @ __ROOT__/tests/fixtures/recursive_type.rb:5
      5 |    a = []
                 ^^ Array::[t1]
        @ __ROOT__/tests/fixtures/recursive_type.rb:6
      6 |    a << a
                  ^ would contain itself here
        @ __ROOT__/tests/fixtures/recursive_type.rb:6
      6 |    a << a
             ^^^^^^ in this expression
